Fix #509 Improved user experience on small screens

--- a/eboutic/static/eboutic/css/eboutic.css
+++ b/eboutic/static/eboutic/css/eboutic.css
@@ -52,23 +52,39 @@
     margin-bottom: 10px
 }
 
+#eboutic .item-row {
+    gap: 10px;
+}
+
 #eboutic .item-name {
-    flex: 1;
+    word-break: break-word;
+    width: 100%;
+    line-height: 100%;
 }
 
-#eboutic .item-price, #eboutic .item-quantity {
-    width: 65px;
-}
-
-#eboutic .item-quantity {
+#eboutic .fa-plus,
+#eboutic .fa-minus {
+    cursor: pointer;
+    background-color: #354a5f;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 10px;
+    line-height: 10px;
+    width: 10px;
     text-align: center;
 }
 
-#eboutic .fa-plus, #eboutic .fa-minus {
-    cursor: pointer;
+#eboutic .item-quantity {
+    min-width: 65px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    gap: 5px;
 }
 
 #eboutic .item-price {
+    min-width: 65px;
     text-align: right;
 }
 
@@ -95,6 +111,7 @@
 @media screen and (max-width: 765px) {
     #eboutic #catalog {
         row-gap: 15px;
+        width: 100%;
     }
 
     #eboutic section {
@@ -103,14 +120,35 @@
 
     #eboutic .product-group {
         justify-content: space-around;
+        flex-direction: column;
+    }
+
+    #eboutic .product-group .product-button {
+        min-height: 100px;
+        width: 100%;
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    #eboutic .product-group .product-description {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    #eboutic .product-description h4{
+        text-align: left;   
     }
 }
 
 #eboutic .product-button {
     position: relative;
     box-sizing: border-box;
-    min-width: 120px;
-    max-width: 150px;
+    min-height: 180px;
+    width: 150px;
     padding: 10px;
     overflow: hidden;
     box-shadow: rgb(60 64 67 / 30%) 0 1px 3px 0, rgb(60 64 67 / 15%) 0 4px 8px 3px;
@@ -118,17 +156,44 @@
     flex-direction: column;
     align-items: center;
     row-gap: 5px;
+    justify-content: space-evenly;
+}
+
+#eboutic .product-button.selected {
+    animation: bg-in-out 1s ease;
+    background-color: rgb(216, 236, 255);
+}
+
+@keyframes bg-in-out {
+    0%   { background-color: white; } 
+    100% { background-color: rgb(216, 236, 255); }
+}
+
+#eboutic .product-button.selected::after {
+    content: "🛒";
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
 
 #eboutic .product-button:active {
     box-shadow: none;
 }
 
-#eboutic .product-button img, #eboutic .product-button .fa {
-    margin: 0;
+#eboutic .product-image {
+    width: 100%;
+    height: 100%;
+    max-width: 80px;
+    max-height: 80px;
+    object-fit: contain;
     border-radius: 4px;
-    height: 40px;
-    line-height: 40px;
+    line-height: 80px;
+}
+
+#eboutic .product-description h4 {
+    font-size: .75em;
+    word-break: break-word;
+    margin: 0 0 5px 0;
 }
 
 #eboutic .product-button p {
@@ -152,8 +217,9 @@
     font-weight: normal;
     color: white;
     min-width: 60px;
-    padding: 5px 10px;
+    padding: 10px 15px;
 }
+
 #eboutic .catalog-buttons .validate {
     background-color: #354a5f;
 }
